[package]
name = "vulkano-guide"
version = "0.1.0"
authors = ["Marin Koštić <kosticmarin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.20.0"

[[bin]]
name = "initialization"
path = "src/init/main.rs"
