[package]
name = "vulkano-guide"
version = "0.1.0"
authors = ["Marin Koštić <kosticmarin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.20.0"
vulkano-shaders = "0.20.0"
image = "0.23.14"

[[bin]]
name = "initialization"
path = "src/init/main.rs"

[[bin]]
name = "bufops"
path = "src/bufops/main.rs"

[[bin]]
name = "bufops_simd"
path = "src/bufops_simd/main.rs"

[[bin]]
name = "image"
path = "src/image/main.rs"

[[bin]]
name = "triangle"
path = "src/triangle/main.rs"
